# terraform-wars-monorepo

./: .editorconfig  .firebaserc  .gitignore  .pre-commit-config.yaml  README.md  firebase.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  django.yaml
terraform-wars-backend/: .dockerignore  .env.sample  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
terraform-wars-backend/entrypoints/: entrypoint-celery-beat.sh  entrypoint-celery.sh  entrypoint-server.sh
terraform-wars-backend/main/: __init__.py  api.py  celeryconf.py  urls.py  wsgi.py
terraform-wars-backend/main/apps/allauth_api/: apps.py  forms.py  routers.py
terraform-wars-backend/main/apps/allauth_api/tests/: test_login.py  test_signup.py
terraform-wars-backend/main/apps/api_auth/: apps.py  routers.py
terraform-wars-backend/main/apps/api_auth/tests/: test_routers.py
terraform-wars-backend/main/apps/core/: admin.py  context_processors.py  exceptions.py  models.py  schemas.py  storage_backends.py  types.py  utils.py
terraform-wars-backend/main/apps/core/tests/: test_context_processors.py  test_healthcheck.py
terraform-wars-backend/main/apps/tutorials/: admin.py  apps.py  enums.py  managers.py  module.py  routers.py  schemas.py
terraform-wars-backend/main/apps/tutorials/migrations/: 0001_initial.py  0002_tutorialgroup_user.py
terraform-wars-backend/main/apps/tutorials/models/: __init__.py  tutorial.py  tutorial_group.py  tutorial_group_config.py  tutorial_submission.py
terraform-wars-backend/main/apps/tutorials/repositories/: __init__.py  tutorial_group_repository.py
terraform-wars-backend/main/apps/tutorials/routers/: __init__.py  tutorial_group_router.py
terraform-wars-backend/main/apps/tutorials/services/: __init__.py  tutorial_group_service.py
terraform-wars-backend/main/apps/tutorials/tests/: conftest.py  test_managers.py
terraform-wars-backend/main/apps/tutorials/tests/test_repositories/: test_tutorial_group_repository.py
terraform-wars-backend/main/apps/tutorials/tests/test_routers/: test_tutorial_group_router.py
terraform-wars-backend/main/apps/tutorials/tests/test_services/: test_tutorial_group_service.py
terraform-wars-backend/main/apps/users/: admin.py  apps.py  forms.py  managers.py  routers.py  schemas.py
terraform-wars-backend/main/apps/users/migrations/: 0001_initial.py  0002_alter_user_is_active_alter_user_is_admin_and_more.py  0003_alter_user_is_active.py
terraform-wars-backend/main/apps/users/models/: __init__.py  user.py
terraform-wars-backend/main/apps/users/services/: user_service.py
terraform-wars-backend/main/settings/: base.py  local-template.py  localhost.py  secrets.py  test.py
terraform-wars-backend/main/templates/: 400.html  403.html  404.html  500.html  base.html
terraform-wars-backend/main/templates/admin/: base.html  base_site.html
terraform-wars-backend/static/css/: main.css
terraform-wars-frontend/: .prettierrc.json  README.md  angular.json  eslint.config.js  orval.config.ts  package-lock.json  package.json  tsconfig.json
terraform-wars-frontend/src/: index.html  main.ts
terraform-wars-frontend/src/app/: app-theme-preset.ts  app.component.css  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
terraform-wars-frontend/src/app/core/guards/: can-activate-auth.guard.spec.ts  can-activate-auth.guard.ts  can-activate-unauth.guard.spec.ts  can-activate-unauth.guard.ts
terraform-wars-frontend/src/app/core/interceptors/: api-url.interceptor.spec.ts  api-url.interceptor.ts  csrf-token.interceptor.spec.ts  csrf-token.interceptor.ts  session-expired.interceptor.spec.ts  session-expired.interceptor.ts  with-credentials.interceptor.spec.ts  (+1 more)
terraform-wars-frontend/src/environments/: environment.prod.ts  environment.ts
(+255 files in other folders)
