[tool.poetry]
name = "terraform-wars-backend"
version = "0.0.1"
description = "Backend for Terraform learning app"
authors = ["Alex Czerny <alexczerny1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.0"
django-ninja = "^1.3.0"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-admin-rangefilter = "^0.13.2"
gunicorn = "^23.0.0"
django-allauth = {extras = ["socialaccount"], version = "^65.7.0"}
sentry-sdk = "^2.17.0"
redis = "^5.2.0"
celery = "^5.4.0"
django-auditlog = "^3.0.0"
django-cors-headers = "^4.6.0"
anydi = "^0.39.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest-django = "^4.10.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
django-silk = "^5.3.1"
model-bakery = "^1.19.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = [
  "E501",
  "E731",
  "F405",
  "F841"
]
line-length = 120
target-version = "py313"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings.test"
